# PluginForge-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pluginforge/: __init__.py  cli.py  core.py
tests/: test_core.py
