[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pluginforge-cli"
version = "1.0.0"
description = "🦞 PluginForge-CLI - Lightweight Terminal AI IDE Plugin Intelligent Management & Publishing Engine | 轻量级终端AI IDE插件智能管理与发布引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "PluginForge Team", email = "pluginforge@example.com"}
]
keywords = [
    "cli", "plugin", "ide", "ai", "cursor", "claude-code", "codex",
    "plugin-manager", "developer-tools", "terminal", "tui"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "questionary>=2.0.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
pluginforge = "pluginforge.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/PluginForge-CLI"
Documentation = "https://github.com/gitstq/PluginForge-CLI#readme"
Repository = "https://github.com/gitstq/PluginForge-CLI"
Issues = "https://github.com/gitstq/PluginForge-CLI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pluginforge*"]

[tool.setuptools.package-data]
pluginforge = ["py.typed", "templates/**/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=pluginforge --cov-report=term-missing"
